--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html>
 
 <head>
@@ -12,7 +12,7 @@
       <td><img src="justme.jpg" alt="fernando profile picture"></td>
       <td><h1>Fernando Tejeda</h1>
       <p><em><strong><a href="https://www.youtube.com/channel/UCYK6CpM5tsLbD1Nbb4Rk5gw">Video Editor</a></strong> and Web Developter</em></p>
-      <p>I am an English Major who edits videos and is learning Code. I love <strong><a href="https://signup.na.leagueoflegends.com/en/signup/redownload?page_referrer=index">League of Legends</a></strong> and recording videos</p></td>
+      <p>I am an English Major who edits videos and is learning Code. I love <strong><a href="https://signup.na.leagueoflegends.com/en/signup/redownload?page_referrer=index">League of Legends</a></strong> and recording videos.</p></td>
     </tr>
   </table>
 
