Add initial CV Website files

--- a/hobbies.html
+++ b/hobbies.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>My Hobbies</title>
@@ -7,9 +7,9 @@
   <body>
     <h3>My Hobbies</h3>
     <ol>
-      <li>Video Editing</li>
-      <li><a href="https://www.microcenter.com/">Building Computers</a></li>
-      <li>Collecting Pops</li>
+      <li>Play <a href="https://signup.leagueoflegends.com/en-us/signup/redownload?page_referrer=index">League of Legends</a></li>
+      <li>Collect<a href="https://www.funko.com/"> Funko Pops</a></li>
+      <li>Build Computers</li>
     </ol>
   </body>
 </html>
