--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
-
+<!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8">
-  <title>Fernando's Personal Site</title>
+  <title>✅Fernando's Personal Site</title>
 </head>
 
 <body>
-  <table cellspacing="20">
+  <table cellspacing=20>
     <tr>
-      <td><img src="justme.jpg" alt="fernando profile picture"></td>
-      <td><h1>Fernando Tejeda</h1>
-      <p><em><strong><a href="https://www.youtube.com/channel/UCYK6CpM5tsLbD1Nbb4Rk5gw">Video Editor</a></strong> and Web Developter</em></p>
-      <p>I am an English Major who edits videos and is learning Code. I love <strong><a href="https://signup.na.leagueoflegends.com/en/signup/redownload?page_referrer=index">League of Legends</a></strong> and recording videos.</p></td>
+      <td><img src="images/Fernando.png.jpg" alt="Fernando Profile Picture"></td>
+      <td>
+        <h1>Fernando Tejeda</h1>
+        <p><em>Web Developer and <strong><a href="https://www.youtube.com/channel/UCYK6CpM5tsLbD1Nbb4Rk5gw">YouTuber</a></strong></em></p>
+        <p>I am learning Code and I also make YouTube videos on the side,
+          <br> primarily about League of Legends.
+        </p>
+      </td>
     </tr>
   </table>
 
@@ -20,53 +24,50 @@
   <hr>
   <h3>Education</h3>
   <ul>
-    <li>Rancho Verde High School</li>
     <li>Riverside Community College</li>
-    <li><a href="https://www.ucr.edu/">University of California Riverside</a></li>
+    <li>University of California Riverside</li>
   </ul>
   <hr>
   <h3>Work Experience</h3>
-<table cellspacing="10">
-  <thead>
+  <table cellspacing=10>
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Work</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2012-2016</td>
+        <td>Pizza Hut</td>
+      </tr>
+      <tr>
+        <td>2017-2020</td>
+        <td>Rapid Response Monitoring</td>
+      </tr>
+    </tbody>
+  </table>
+  <hr>
+  <h3>Skills</h3>
+  <table cellspacing=10>
     <tr>
-      <th>Dates</th>
-      <th>Work</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>2012-2016</td>
-      <td>Pizza Hut School Lunch Manager</td>
+      <td>Computer Building</td>
+      <td>👍👍👍👍👍</td>
     </tr>
     <tr>
-      <td>2017</td>
-      <td>Unemployed for a few months</td>
+      <td>Youtube</td>
+      <td>👍👍👍</td>
     </tr>
-  </tbody>
-</table>
-<hr>
-<h3>Skills</h3>
-
-      <table cellspacing="10">
-        <tr>
-          <td>Computer Building</td>
-          <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-          <td>Gaming</td>
-          <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-          <td>Math</td>
-          <td>⭐⭐</td>
-        </tr>
-      </table>
-
+    <tr>
+      <td>Writing</td>
+      <td>👍👍👍👍</td>
+    </tr>
+  </table>
 
   <hr>
-<a href="hobbies.html">My Hobbies</a>
-<br>
-<a href="contactme.html">Contact Me</a>
+  <a href="hobbies.html">My Hobbies</a>
+  <br>
+  <a href="contacts.html">My Contacts</a>
 </body>
 
 </html>
