--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>✅Fernando's Personal Site</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="CSS/styles.css">
 
 </head>
 
@@ -13,7 +13,7 @@
     <tr>
       <td><img src="images/Fernando.png.jpg" alt="Fernando Profile Picture"></td>
       <td>
-        <h1>Fernando Tejeda</h1>
+        <h1>Hello, I am Fernando Tejeda</h1>
         <p><em>Web Developer and <strong><a href="https://www.youtube.com/channel/UCYK6CpM5tsLbD1Nbb4Rk5gw">YouTuber</a></strong></em></p>
         <p>I am learning Code and I also make YouTube videos on the side,
           <br> primarily about League of Legends.
