added CSS Link to all my pages

--- a/hobbies.html
+++ b/hobbies.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>My Hobbies</title>
-  </head>
-  <body>
-    <h3>My Hobbies</h3>
-    <ol>
-      <li>Play <a href="https://signup.leagueoflegends.com/en-us/signup/redownload?page_referrer=index">League of Legends</a></li>
-      <li>Collect<a href="https://www.funko.com/"> Funko Pops</a></li>
-      <li>Build Computers</li>
-    </ol>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>My Hobbies</title>
+  <link rel="stylesheet" href="CSS/styles.css">
+</head>
+
+<body>
+  <h3>My Hobbies</h3>
+  <ol>
+    <li>Play <a href="https://signup.leagueoflegends.com/en-us/signup/redownload?page_referrer=index">League of Legends</a></li>
+    <li>Collect<a href="https://www.funko.com/"> Funko Pops</a></li>
+    <li>Build Computers</li>
+  </ol>
+</body>
+
 </html>
