--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>My Contacts</title>
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
@@ -14,15 +15,15 @@
     <li><a href="https://mobile.twitter.com/Fernanology">Twitter</a></li>
   </ol>
   <hr>
-<form action="mailto:feteje@aol.com" method="post"enctype="text/plain">
-  <label>Your Name:</label>
-  <input type="text" name="yourName" value=""><br>
-  <label>Your Email:</label>
-  <input type="email" name="yourEmail" value=""><br>
-  <label>Your Message</label><br>
-  <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
-  <input type="submit" name="">
-</form>
+  <form action="mailto:feteje@aol.com" method="post" enctype="text/plain">
+    <label>Your Name:</label>
+    <input type="text" name="yourName" value=""><br>
+    <label>Your Email:</label>
+    <input type="email" name="yourEmail" value=""><br>
+    <label>Your Message</label><br>
+    <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
+    <input type="submit" name="">
+  </form>
 
 </body>
 
