--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <li>University of California Riverside</li>
   </ul>
   <hr>
-  <h3>Work Experience</h3>
+  <h3 class="custom">Work Experience</h3>
   <table cellspacing=10>
     <thead>
       <tr>
