added the link to my funko pop page

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
   <a href="hobbies.html">My Hobbies</a>
   <br>
   <a href="contacts.html">My Contacts</a>
+  <a href="myfunkopop.html">My Funko Pops</a>
 </body>
 
 </html>
