--- a/myfunkopop.html
+++ b/myfunkopop.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>My Funko Pop</title>
-
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
