this is a test change

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
   <hr>
-  <h3>Education</h3>
+  <h3>Education- Changes</h3>
   <ul>
     <li>Riverside Community College</li>
     <li>University of California Riverside</li>
